<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>maliput-integration</name>
  <version>0.1.0</version>
  <description>Maliput Integration.</description>
  <maintainer email="daniel.stonier@tri.global">Daniel Stonier</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>ament_cmake_doxygen</build_depend>

  <depend>dragway</depend>
  <depend>libgflags-dev</depend>
  <depend>maliput</depend>
  <depend>maliput-utilities</depend>
  <depend>multilane</depend>
  <depend>yaml-cpp</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

