<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>maliput_py</name>
  <version>1.0.0</version>
  <description>Maliput bindings</description>
  <maintainer email="andrew.best@tri.global">Andrew Best</maintainer>
  <license file="../LICENSE">BSD Clause 3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>ament_cmake_doxygen</build_depend>
  <build_depend>python-pylint3</build_depend>
  <build_depend>python-pycodestyle</build_depend>

  <depend>maliput</depend>
  <depend>pybind11</depend>

  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
